Style register form and introduce translations

--- a/app/templates/main.html.twig
+++ b/app/templates/main.html.twig
@@ -1,13 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<header>
-    {% block header %}{% endblock %}
-</header>
-<main role="main">
-    {% block main %}{% endblock %}
-</main>
-<footer>
-    {% block footer %}{% endblock %}
-</footer>
+    <div class="container-fluid">
+        <div class="row">
+            <header>
+                {% block header %}{% endblock %}
+            </header>
+        </div>
+        <div class="row">
+            <main role="main">
+                {% block main %}{% endblock %}
+            </main>
+        </div>
+        <div class="row">
+            <footer>
+                {% block footer %}{% endblock %}
+            </footer>
+        </div>
+    </div>
 {% endblock %}
