--- a/app/templates/registration/register.html.twig
+++ b/app/templates/registration/register.html.twig
@@ -1,15 +1,25 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {{ encore_entry_link_tags('login') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('login') }}
+{% endblock %}
+
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    {{ form_row(registrationForm.email) }}
+    {{ form_row(registrationForm.plainPassword) }}
+    {{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn">Register</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">
+        {% trans %}register.register{% endtrans %}
+    </button>
     {{ form_end(registrationForm) }}
 {% endblock %}
