--- a/app/templates/security/login.html.twig
+++ b/app/templates/security/login.html.twig
@@ -10,7 +10,7 @@
     {{ encore_entry_script_tags('login') }}
 {% endblock %}
 
-{% block title %}Log in{% endblock %}
+{% block title %}{% trans %}login.login{% endtrans %}{% endblock %}
 
 {% block body %}
     <form class="form-signin text-center" method="post">
@@ -22,7 +22,8 @@
 
         {% if app.user %}
             <div class="mb-3">
-                You are logged in as {{ app.user.username }}, <a href="{{ path('logout') }}">Logout</a>
+                {% trans %}login.logged_in{% endtrans %} {{ app.user.username }},
+                <a href="{{ path('logout') }}">{% trans %}login.logout{% endtrans %}</a>
             </div>
         {% endif %}
 
@@ -33,9 +34,9 @@
                 width="128"
                 height="128"
         >
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">{% trans %}login.title{% endtrans %}</h1>
 
-        <label for="inputEmail" class="sr-only">Email address</label>
+        <label for="inputEmail" class="sr-only">{% trans %}login.email{% endtrans %}</label>
         <input
                 type="email"
                 value="{{ last_username }}"
@@ -47,7 +48,7 @@
                 autofocus
         >
 
-        <label for="inputPassword" class="sr-only">Password</label>
+        <label for="inputPassword" class="sr-only">{% trans %}login.password{% endtrans %}</label>
         <input
                 type="password"
                 name="password"
@@ -71,11 +72,22 @@
                         name="_remember_me"
                         checked
                 >
-                Remember me
+                {% trans %}login.remember_me{% endtrans %}
             </label>
         </div>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">No Account? <a href="#">Please register!</a></p>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">
+            {% trans %}login.sign_in{% endtrans %}
+        </button>
+
+        <p class="mt-5 text-muted">
+            {% trans with {'%path%': '#' } %}login.forgot_password{% endtrans %}
+        </p>
+        <p class="text-muted">
+            {% trans with {'%path%': path('register') } %}login.register{% endtrans %}
+        </p>
+        <p class="mb-3 text-muted">
+            {% trans with {'%path%': "#" } %}login.demo{% endtrans %}
+        </p>
     </form>
 {% endblock %}
