--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -21,7 +21,7 @@ $brand-danger:          #d9534f; // #d9534f
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               $gray-lighter; // #fff
+$body-bg:               $gray-dark; // #fff
 //** Global text color on `<body>`.
 $text-color:            $gray-dark; // $gray-dark
 
