--- a/app/templates/main.html.twig
+++ b/app/templates/main.html.twig
@@ -1,21 +1,68 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container-fluid">
-        <div class="row">
-            <header>
-                {% block header %}{% endblock %}
-            </header>
+    <header class="sticky-top">
+        {% block header %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <img
+                        src="{{ asset('images/logo.svg') }}"
+                        width="64"
+                        height="64"
+                        alt="THlEd BUGTRACKER Logo"
+                >
+                <span class="navbar-brand mb-0 h1">
+                    {% trans %}website.title{% endtrans %}
+                </span>
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    {% block header_content %}
+                        {% include 'navigation.html.twig' %}
+                    {% endblock %}
+                </div>
+            </nav>
+        {% endblock %}
+    </header>
+    <main role="main">
+        <div class="container">
+            {% block main %}
+            <div class="card px-5 my-3">
+                <h1 class="mt-5">
+                    {% block main_title %}
+                        Title of the content!
+                    {% endblock %}
+                </h1>
+                <p class="lead">
+                    {% block main_lead %}
+                        Leading text to the main content.
+                    {% endblock %}
+                </p>
+                <p>
+                    {% block main_content %}
+                        {% include 'loremIpsum.html.twig' %}
+                    {% endblock %}
+                </p>
+            </div>
+            {% endblock %}
         </div>
-        <div class="row">
-            <main role="main">
-                {% block main %}{% endblock %}
-            </main>
-        </div>
-        <div class="row">
-            <footer>
-                {% block footer %}{% endblock %}
-            </footer>
-        </div>
-    </div>
+    </main>
+    <footer class="footer fixed-bottom">
+        {% block footer %}
+        <nav class="navbar navbar-expand navbar-light bg-darker">
+            {% block footer_content %}
+                {% include 'footer.html.twig' %}
+            {% endblock %}
+        </nav>
+        {% endblock %}
+    </footer>
 {% endblock %}
