Style footer to be sticky at the bottom

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -11,7 +11,7 @@
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
 </head>
-<body class="m-lg-5">
+<body class="mx-lg-5">
 {% block body %}{% endblock %}
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
