--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -2,18 +2,18 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$gray-base:              #000; // #000
-$gray-darker:            lighten($gray-base, 13.5%); // lighten($gray-base, 13.5%)
-$gray-dark:              lighten($gray-base, 20%); // lighten($gray-base, 20%)
-$gray:                   lighten($gray-base, 33.5%); // lighten($gray-base, 33.5%)
-$gray-light:             lighten($gray-base, 46.7%); // lighten($gray-base, 46.7%)
-$gray-lighter:           lighten($gray-base, 93.5%); // lighten($gray-base, 93.5%)
+$gray-base: #000; // #000
+$gray-darker: lighten($gray-base, 13.5%); // lighten($gray-base, 13.5%)
+$gray-dark: lighten($gray-base, 20%); // lighten($gray-base, 20%)
+$gray: lighten($gray-base, 33.5%); // lighten($gray-base, 33.5%)
+$gray-light: lighten($gray-base, 46.7%); // lighten($gray-base, 46.7%)
+$gray-lighter: lighten($gray-base, 93.5%); // lighten($gray-base, 93.5%)
 
-$brand-primary:         #f9a826; // darken(#428bca, 6.5%)
-$brand-success:         #5cb85c; // #5cb85c
-$brand-info:            #5bc0de; // #5bc0de
-$brand-warning:         #f0ad4e; // #f0ad4e
-$brand-danger:          #d9534f; // #d9534f
+$brand-primary: #f9a826; // darken(#428bca, 6.5%)
+$brand-success: #5cb85c; // #5cb85c
+$brand-info: #5bc0de; // #5bc0de
+$brand-warning: #f0ad4e; // #f0ad4e
+$brand-danger: #d9534f; // #d9534f
 
 
 //== Scaffolding
@@ -21,15 +21,24 @@ $brand-danger:          #d9534f; // #d9534f
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               $gray-dark; // #fff
+$body-bg: $gray-dark; // #fff
 //** Global text color on `<body>`.
-$text-color:            $gray-dark; // $gray-dark
+$text-color: $gray-dark; // $gray-dark
 
 //** Global textual link color.
-$link-color:            $brand-primary; // $brand-primary
+$link-color: $brand-primary; // $brand-primary
 //** Link hover color set via `darken()` function.
-$link-hover-color:      darken($link-color, 15%); // darken($link-color, 15%)
+$link-hover-color: darken($link-color, 15%); // darken($link-color, 15%)
 //** Link hover decoration.
 $link-hover-decoration: underline; // underline
 
 @import "~bootstrap/scss/bootstrap";
+
+html {
+  min-height: 100vh;
+  body {
+    main {
+      min-height: 80vh;
+    }
+  }
+}
