--- a/app/templates/navigation.html.twig
+++ b/app/templates/navigation.html.twig
@@ -11,8 +11,24 @@
     <li class="nav-item">
         <a class="nav-link" href="#">{{ 'header.tickets'|trans }}</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">{{ 'header.account'|trans }}</a>
+    <li class="nav-item dropdown">
+        <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+        >
+            {{ 'header.account.name'|trans }}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">{{ 'header.account.profile'|trans }}</a>
+            <a class="dropdown-item" href="#">{{ 'header.account.settings'|trans }}</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{{ path('logout') }}">{{ 'header.account.logout'|trans }}</a>
+        </div>
     </li>
 </ul>
 <form class="form-inline my-2 my-lg-0">
