--- a/app/templates/main.html.twig
+++ b/app/templates/main.html.twig
@@ -28,7 +28,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     {% block header_content %}
-                        {% include 'navigation.html.twig' %}
+                        {% include 'navigation/navbar.html.twig' %}
                     {% endblock %}
                 </div>
             </nav>
@@ -37,22 +37,24 @@
     <main role="main">
         <div class="container-fluid">
             {% block main %}
-                <div class="card px-5">
-                    <h1 class="mt-5">
+                <div class="card">
+                    <h2 class="card-header py-3">
                         {% block main_title %}
                             Title of the content!
                         {% endblock %}
-                    </h1>
-                    <p class="lead">
-                        {% block main_lead %}
-                            Leading text to the main content.
-                        {% endblock %}
-                    </p>
-                    <p>
-                        {% block main_content %}
-                            {% include 'loremIpsum.html.twig' %}
-                        {% endblock %}
-                    </p>
+                    </h2>
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            {% block main_lead %}
+                                Leading text to the main content.
+                            {% endblock %}
+                        </h5>
+                        <p class="card-text">
+                            {% block main_content %}
+                                {% include 'loremIpsum.html.twig' %}
+                            {% endblock %}
+                        </p>
+                    </div>
                 </div>
             {% endblock %}
         </div>
