Update Add a Bug page

--- a/app/templates/bug/add.html.twig
+++ b/app/templates/bug/add.html.twig
@@ -1,1 +1,10 @@
 {% extends 'main.html.twig' %}
+
+{% block main_title %}
+    {{ 'bug.title'|trans }}
+{% endblock %}
+{% block main_lead %}
+    {{ 'bug.lead'|trans }}
+{% endblock %}
+{% block main_content %}
+{% endblock %}
