--- a/app/templates/bug/add.html.twig
+++ b/app/templates/bug/add.html.twig
@@ -3,8 +3,11 @@
 {% block main_title %}
     {{ 'bug.title'|trans }}
 {% endblock %}
+
 {% block main_lead %}
     {{ 'bug.lead'|trans }}
 {% endblock %}
+
 {% block main_content %}
+    {{ form(form) }}
 {% endblock %}
