--- a/app/templates/navigation/navbar.html.twig
+++ b/app/templates/navigation/navbar.html.twig
@@ -1,4 +1,4 @@
-{% from 'navigation/navbar_items.html.twig' import menuItem, menuDropdown %}
+{% from 'navigation/_navbar_items.html.twig' import menuItem, menuDropdown %}
 
 <ul class="navbar-nav mr-auto">
     {{ menuItem('header.dashboard', path('index')) }}
