Add "Overview of Bugs" page

--- a/app/templates/bug/add.html.twig
+++ b/app/templates/bug/add.html.twig
@@ -1,11 +1,11 @@
 {% extends 'main.html.twig' %}
 
 {% block main_title %}
-    {{ 'bug.title'|trans }}
+    {{ 'bug.add.title'|trans }}
 {% endblock %}
 
 {% block main_lead %}
-    {{ 'bug.lead'|trans }}
+    {{ 'bug.add.lead'|trans }}
 {% endblock %}
 
 {% block main_content %}
