Add editing of Bugs

--- a/app/templates/bug/edit.html.twig
+++ b/app/templates/bug/edit.html.twig
@@ -4,7 +4,28 @@
     {{ 'bug.edit.title'|trans }}
 {% endblock %}
 
+{% block main_lead %}
+    {{ 'bug.edit.lead'|trans }}
+{% endblock %}
+
 {% block main_content %}
-    bug: {{ bugId }}
+    {{ form_start(form) }}
+
+    {{ form_row(form.project) }}
+    {{ form_row(form.status) }}
+    {{ form_row(form.priority) }}
+    {{ form_row(form.due) }}
+    {{ form_row(form.title) }}
+    {{ form_row(form.summary) }}
+    {{ form_row(form.reproduce) }}
+    {{ form_row(form.expected) }}
+    {{ form_row(form.actual) }}
+    {{ form_row(form.reporter) }}
+    {{ form_row(form.assignee) }}
+
+    <button type="submit" class="btn btn-primary">Update</button>
+    <a href="{{ path('bug_list') }}" class="btn btn-secondary">Cancel</a>
+
+    {{ form_end(form) }}
 {% endblock %}
 
